fix cursor jumping by 1px left and right

--- a/css/jquery.terminal-src.css
+++ b/css/jquery.terminal-src.css
@@ -143,16 +143,18 @@ body.full-screen-terminal .terminal {
     border-left: 1px solid transparent;
     position: absolute;
     top: 0;
-    margin-left: -1px;
+    /* margin-left: -1px; */
     background-color: inherit;
     color: inherit;
     bottom: 0;
+    left: -1px;
+    right: 1px;
 }
 .cmd .cursor-line > span:empty {
-    display: none;
+    /* display: none; */
 }
 .cmd .cursor-line > span:empty + .cursor + span {
-    margin-left: -1px;
+    /*margin-left: -1px;*/
 }
 .cmd .cursor-line > span:not(.cursor):not(:empty) {
     /* margin-left: -1px; */
@@ -391,12 +393,6 @@ terminal .terminal-output > div {
       border-bottom-color: #000;
       border-bottom-color: var(--background, #000);
   }
-}
-.cursor-line > :first-child {
-    white-space: nowrap;
-}
-.cursor-line > :first-child [data-text]:last-child {
-    margin-right: -1px;
 }
 .underline-animation .cursor.blink span span {
     /* margin-top: 2px; */
