--- a/css/jquery.terminal.css
+++ b/css/jquery.terminal.css
@@ -12,7 +12,7 @@
  * Copyright (c) 2011-2018 Jakub Jankiewicz <http://jcubic.pl>
  * Released under the MIT license
  *
- * Date: Wed, 17 Oct 2018 11:44:43 +0000
+ * Date: Wed, 17 Oct 2018 12:15:42 +0000
  */
 .terminal .terminal-output .format, .cmd .format,
 .cmd .prompt, .cmd .prompt div, .terminal .terminal-output div div{
@@ -143,16 +143,18 @@ body.full-screen-terminal .terminal {
     border-left: 1px solid transparent;
     position: absolute;
     top: 0;
-    margin-left: -1px;
+    /* margin-left: -1px; */
     background-color: inherit;
     color: inherit;
     bottom: 0;
+    left: -1px;
+    right: 1px;
 }
 .cmd .cursor-line > span:empty {
-    display: none;
+    /* display: none; */
 }
 .cmd .cursor-line > span:empty + .cursor + span {
-    margin-left: -1px;
+    /*margin-left: -1px;*/
 }
 .cmd .cursor-line > span:not(.cursor):not(:empty) {
     /* margin-left: -1px; */
@@ -391,12 +393,6 @@ terminal .terminal-output > div {
       border-bottom-color: #000;
       border-bottom-color: var(--background, #000);
   }
-}
-.cursor-line > :first-child {
-    white-space: nowrap;
-}
-.cursor-line > :first-child [data-text]:last-child {
-    margin-right: -1px;
 }
 .underline-animation .cursor.blink span span {
     /* margin-top: 2px; */
